--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Our Vision, Mission, Values & Motto.md
       - Our Song & Crest.md
       - Our Rules & Regulations.md
       - Our use of photographs, videos and publication of students’ works.md
