--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Principal’s Message.md
       - Our Story.md
       - Our Vision, Mission, Values & Motto.md
       - Our Song & Crest.md
