--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,3 +21,18 @@ links:
         url: /about-us/our-services
       - title: Our Learning Spaces
         url: /about-us/our-learning-spaces
+  - title: Culture of Care
+    url: /culture-of-care/
+    sublinks:
+      - title: Lower Block Programmes
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-lower-block-progs/lower-block-progs-home
+      - title: Middle Block Programmes
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-middle-block-progs/middle-block-progs-home
+      - title: Upper Block Programmes
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-upper-block-progs/upper-block-progs-home
+      - title: Values in Action (VIA)
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-values-in-action/values-in-action-home
+      - title: Student Leadership
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-student-leadership/student-leadership-home
+      - title: Co-Curricular Activities (CCA)
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-cca/co-curricular-activities-home
