--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -36,3 +36,14 @@ links:
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-student-leadership/student-leadership-home
       - title: Co-Curricular Activities (CCA)
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-cca/co-curricular-activities-home
+  - title: Uniquely Us
+    url: /uniquely-us/
+    sublinks:
+      - title: Applied Learning Programme
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-speak-up-at-fuchun/speak-up-at-fuchun-home
+      - title: Learning for Life Programme
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-arts/arts-home
+      - title: Home Skills Programme
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-home-skills-prog/home-skills-home
+      - title: Homeroom Programme
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-homeroom-prog/homeroom-home
