--- a/_for-parents-and-students/collection.yml
+++ b/_for-parents-and-students/collection.yml
@@ -2,4 +2,5 @@ collections:
   for-parents-and-students:
     output: true
     order:
+      - For Parents & Students.md
       - Sexuality Education.md
