--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -68,3 +68,22 @@ links:
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-ict-dept/information-communication-technology-dept-home
       - title: Assessment Plan
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-assessment-plan/assessment-plan-home
+  - title: For Parents & Students
+    url: /for-parents-n-students/
+    sublinks:
+      - title: Parents Gateway & Announcement
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-letters-to-parents/letters-to-parents-home
+      - title: Term Calendars
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-term-calendars/term-calendars-home
+      - title: Bridging Resources
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-bridging-resources/login-to-bridging-resources
+      - title: Submit Referral to Counsellor
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-submit-referral-sc/submit-referral-to-sc-home
+      - title: Home-Based Learning
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-hbl/hbl-home
+      - title: MOE Websites
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-moe-websites/moe-websites-home
+      - title: HPB Resources
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-partnership/health-promotion-board-home
+      - title: Sexuality Education
+        url: /for-parents-n-students/sexuality-education
