--- a/_partnership/collection.yml
+++ b/_partnership/collection.yml
@@ -2,5 +2,6 @@ collections:
   partnership:
     output: true
     order:
+      - Health Promotion Board.md
       - Big Heart SCC.md
       - Mendaki.md
