--- a/_partnership/collection.yml
+++ b/_partnership/collection.yml
@@ -2,6 +2,7 @@ collections:
   partnership:
     output: true
     order:
+      - Positive Parenting Programs (Triple P).md
       - Youth Alumni.md
       - Health Promotion Board.md
       - Big Heart SCC.md
