--- a/_partnership/collection.yml
+++ b/_partnership/collection.yml
@@ -2,6 +2,7 @@ collections:
   partnership:
     output: true
     order:
+      - School Advisory Committee (SAC).md
       - Parent Support Group (PSG).md
       - Positive Parenting Programs (Triple P).md
       - Youth Alumni.md
