--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -68,6 +68,23 @@ links:
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-ict-dept/information-communication-technology-dept-home
       - title: Assessment Plan
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-assessment-plan/assessment-plan-home
+  - title: Partnership
+    url: /partnership/school-advisory-committee-sac
+    sublinks:
+      - title: School Advisory Committee
+        url: /partnership/school-advisory-committee-sac
+      - title: Parent Support Group
+        url: /partnership/parent-support-group-psg
+      - title: Positive Parenting Programs
+        url: /partnership/positive-parenting-programs-triple-p
+      - title: Youth Alumni
+        url: /partnership/youth-alumni
+      - title: Health Promotion Board
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-partnership/health-promotion-board-home
+      - title: Big Heart SCC
+        url: /partnership/big-heart-scc
+      - title: Mendaki
+        url: /partnership/mendaki
   - title: For Parents & Students
     url: /for-parents-n-students/
     sublinks:
