--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ colors:
     - title: media-color-one
       color: "#f8e71c"
     - title: media-color-two
-      color: "#f0dda9"
+      color: "#0c94bb"
     - title: media-color-three
       color: "#00838f"
     - title: media-color-four
