--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -88,10 +88,16 @@ links:
   - title: For Parents & Students
     url: /for-parents-n-students/
     sublinks:
+      - title: For New P1 2023
+        url: /permalink
+      - title: Parents' Briefing Materials
+        url: /permalink
       - title: Parents Gateway & Announcement
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-letters-to-parents/letters-to-parents-home
       - title: Term Calendars
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-term-calendars/term-calendars-home
+      - title: School Assessments
+        url: /permalink
       - title: Bridging Resources
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-bridging-resources/login-to-bridging-resources
       - title: Submit Referral to Counsellor
@@ -102,5 +108,3 @@ links:
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-moe-websites/moe-websites-home
       - title: HPB Resources
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-partnership/health-promotion-board-home
-      - title: Sexuality Education
-        url: /for-parents-n-students/sexuality-education
