--- a/_for-parents-and-students/collection.yml
+++ b/_for-parents-and-students/collection.yml
@@ -2,5 +2,6 @@ collections:
   for-parents-and-students:
     output: true
     order:
+      - For New P1 2023.md
       - For Parents & Students.md
       - Sexuality Education.md
