--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -89,7 +89,7 @@ links:
     url: /for-parents-n-students/
     sublinks:
       - title: For New P1 2023
-        url: /permalink
+        url: /for-parents-and-students/for-new-p1-2023
       - title: Parents' Briefing Materials
         url: /permalink
       - title: Parents Gateway & Announcement
