--- a/_for-parents-and-students/collection.yml
+++ b/_for-parents-and-students/collection.yml
@@ -2,6 +2,7 @@ collections:
   for-parents-and-students:
     output: true
     order:
+      - Parents' Briefing Materials.md
       - For New P1 2023.md
       - For Parents & Students.md
       - Sexuality Education.md
