--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -97,7 +97,7 @@ links:
       - title: Term Calendars
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-term-calendars/term-calendars-home
       - title: School Assessments
-        url: /permalink
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site/school-assessments-home
       - title: Bridging Resources
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-bridging-resources/login-to-bridging-resources
       - title: Submit Referral to Counsellor
