--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -91,7 +91,7 @@ links:
       - title: For New P1 2023
         url: /for-parents-and-students/for-new-p1-2023
       - title: Parents' Briefing Materials
-        url: /permalink
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-parents-briefing/parents-briefing-home
       - title: Parents Gateway & Announcement
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-letters-to-parents/letters-to-parents-home
       - title: Term Calendars
