--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -108,3 +108,5 @@ links:
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-moe-websites/moe-websites-home
       - title: HPB Resources
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-partnership/health-promotion-board-home
+      - title: Sexuality Education
+        url: /permalink
