--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -109,4 +109,4 @@ links:
       - title: HPB Resources
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-partnership/health-promotion-board-home
       - title: Sexuality Education
-        url: /permalink
+        url: https://www.fuchunpri.moe.edu.sg/for-parents-n-students/sexuality-education/
