--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -108,3 +108,5 @@ links:
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-partnership/health-promotion-board-home
       - title: Sexuality Education
         url: https://www.fuchunpri.moe.edu.sg/for-parents-n-students/sexuality-education/
+      - title: Our Services
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-our-services/our-services-home
