--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -74,7 +74,7 @@ links:
       - title: Positive Parenting Programs
         url: /partnership/positive-parenting-programs-triple-p
       - title: Youth Alumni
-        url: /partnership/youth-alumni
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-fya/fuchun-youth-alumni-home
       - title: Health Promotion Board
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-partnership/health-promotion-board-home
       - title: Big Heart SCC
