--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -109,5 +109,4 @@ links:
       - title: MOE Websites
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-moe-websites/moe-websites-home
       - title: FCPS Cyber Wellness Toolkit
-        url: "https://sites.google.com/moe.edu.sg/fcp-cyberwellness/cyber-wellness-home
-          "
+        url: https://sites.google.com/moe.edu.sg/fcp-cyberwellness/cyber-wellness-home
