{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"1015"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -84,6 +84,8 @@ links:
   - title: For Parents & Students
     url: /for-parents-n-students/
     sublinks:
+      - title: P1 Virtual Open House
+        url: https://sites.google.com/moe.edu.sg/fuchunprimaryschoolg-site/p1-virtual-open-house
       - title: Term Calendars
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-term-calendars/term-calendars-home
       - title: School Assessments
