--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,12 +13,14 @@ links:
         url: /about-us/our-song-n-crest
       - title: Our Rules & Regulations
         url: /about-us/our-rules-n-regulations
-      - title: Our use of our students’ works
-        url: /about-us/our-use-of-photographs-videos-and-publication-of-students-works
       - title: Our Staff
         url: /about-us/our-staff
       - title: Our Learning Spaces
         url: /about-us/our-learning-spaces
+      - title: Our Publications
+        url: /about-us/our-publications
+      - title: Our use of our students’ works
+        url: /about-us/our-use-of-photographs-videos-and-publication-of-students-works
   - title: Culture of Care
     url: /culture-of-care/
     sublinks:
