{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"1015"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ links:
       - title: Our Learning Spaces
         url: /about-us/our-learning-spaces
       - title: Our Publications
-        url: /about-us/permalink/
+        url: /about-us/our-publications
       - title: Our use of our students’ works
         url: /about-us/our-use-of-photographs-videos-and-publication-of-students-works
   - title: Culture of Care
