{"message":"Update file: navigation.yml","userId":"1015","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,6 +21,8 @@ links:
         url: /about-us/our-publications
       - title: Our use of our students’ works
         url: /about-us/our-use-of-photographs-videos-and-publication-of-students-works
+      - title: Our School Policies
+        url: https://www.fuchunpri.moe.edu.sg/our-school-policies/
   - title: Culture of Care
     url: /culture-of-care/
     sublinks:
