--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,8 @@ links:
         url: /about-us/our-story
       - title: Our Vision, Mission & Values
         url: /about-us/our-vision-mission-values-n-motto
+      - title: Our School Safety Policy
+        url: /https://www.fuchunpri.moe.edu.sg/our-school-safety-policy/
       - title: Our Song & Crest
         url: /about-us/our-song-n-crest
       - title: Our Rules & Regulations
