{"message":"Update file: navigation.yml","userId":"33227","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -106,6 +106,8 @@ links:
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-submit-referral-sc/submit-referral-to-sc-home
       - title: Home-Based Learning
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-hbl/hbl-home
+      - title: Edtech Guide
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-hbl/edtech-guide
       - title: HPB Resources
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-partnership/health-promotion-board-home
       - title: MOE Websites
