{"message":"Update file: navigation.yml","userId":"33227","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -88,7 +88,7 @@ links:
     sublinks:
       - title: P1 Virtual Open House
         url: https://sites.google.com/moe.edu.sg/fuchunprimaryschoolg-site/p1-virtual-open-house
-      - title: Term Calendars
+      - title: School Calendar
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-term-calendars/term-calendars-home
       - title: School Assessments
         url: https://sites.google.com/moe.edu.sg/fcps-g-site/school-assessments-home
