--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -112,5 +112,5 @@ links:
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-partnership/health-promotion-board-home
       - title: MOE Websites
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-moe-websites/moe-websites-home
-      - title: FCPS Cyber Wellness Toolkit
-        url: https://sites.google.com/moe.edu.sg/fcp-cyberwellness/cyber-wellness-home
+      - title: Homewell@FCPS
+        url: https://go.gov.sg/homewellfcps
