{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Principal’s Message.md
-      - Our Story.md
+      - Fuchun Story.md
       - Our Vision, Mission, Values & Motto.md
       - Our School Safety Policy.md
       - Our Song & Crest.md
