--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,8 @@ links:
     sublinks:
       - title: Principal’s Message
         url: /about-us/principal-s-message
-      - title: Our Story
-        url: /about-us/our-story
+      - title: Fuchun Story
+        url: /about-us/fuchun-story
       - title: Our Vision, Mission & Values
         url: /about-us/our-vision-mission-values-n-motto
       - title: Our School Safety Policy
