--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Our People/Primary 1 Form Teachers.md
       - Our People/Our Staff.md
       - Our People/.keep
       - Principal’s Message.md
