--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-logo: /images/logo.png
+logo: /images/About Us/navigation_logo.png
 links:
   - title: About Us
     url: /about-us/principal-s-message
