{"message":"Update file: navigation.yml","userId":"33227","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-logo: /images/About Us/navigation_logo.png
+logo: /images/About Us/ChatGPT_Image_Jul_12__2025__10_31_53_AM.png
 links:
   - title: About Us
     url: /about-us/principal-s-message
