{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -7,7 +7,7 @@ collections:
       - Our Vision, Mission, Values & Motto.md
       - Our School Safety Policy.md
       - Our Song & Crest.md
-      - Our People/P2 Form Teachers.md
+      - Our People/Primary 2 Form Teachers.md
       - Our People/.keep
       - Our People/Primary 1 Form Teachers.md
       - Our People/Our Staff.md
