{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -7,6 +7,7 @@ collections:
       - Our Vision, Mission, Values & Motto.md
       - Our School Safety Policy.md
       - Our Song & Crest.md
+      - Our People/Other Teachers.md
       - Our People/Primary 6 Form Teachers.md
       - Our People/Primary 5 Form Teachers.md
       - Our People/Primary 4 Form Teachers.md
