{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -7,6 +7,7 @@ collections:
       - Our Vision, Mission, Values & Motto.md
       - Our School Safety Policy.md
       - Our Song & Crest.md
+      - Our People/School Admin and Operations Staff.md
       - Our People/Allied Educators.md
       - Our People/Other Teachers.md
       - Our People/Primary 6 Form Teachers.md
