--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -7,6 +7,7 @@ collections:
       - Our Vision, Mission, Values & Motto.md
       - Our School Safety Policy.md
       - Our Song & Crest.md
+      - Our People/School Management Committee.md
       - Our People/School Advisory Committee (SAC).md
       - Our People/School Admin and Operations Staff.md
       - Our People/Allied Educators.md
