--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-logo: /images/About Us/nav_bar_ver_2_cropped.png
+logo: /images/About Us/nav_bar_ver_3.png
 links:
   - title: About Us
     url: /about-us/principal-s-message
