--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Contact.md
       - Principal’s Message.md
       - Fuchun Story.md
       - Our Vision, Mission, Values & Motto.md
