--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Contact.md
       - Principal’s Message.md
-      - Fuchun Story.md
+      - Our Fuchun Story.md
       - Our Vision, Mission, Values & Motto.md
       - Our School Safety Policy.md
       - Our Song & Crest.md
