{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -5,7 +5,7 @@ collections:
       - Contact.md
       - Principal’s Message.md
       - Fuchun Story.md
-      - Our Vision, Mission, Values & Motto.md
+      - Our Vision, Mission, Values, Motto & Crest.md
       - Our School Safety Policy.md
       - Our Song & Crest.md
       - Our People/.keep
