--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Contact/.keep
       - Principal’s Message.md
       - Fuchun Story.md
       - Vision, Mission, Values, Motto & Crest.md
