{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Contact/Location.md
       - Contact/.keep
       - Principal’s Message.md
       - Fuchun Story.md
