--- a/_hidden/collection.yml
+++ b/_hidden/collection.yml
@@ -2,6 +2,7 @@ collections:
   hidden:
     output: true
     order:
+      - Our School Safety Policy.md
       - Our Song & Crest.md
       - Our Staff.md
       - Big Heart SCC.md
