--- a/_hidden/collection.yml
+++ b/_hidden/collection.yml
@@ -2,6 +2,7 @@ collections:
   hidden:
     output: true
     order:
+      - Our School Policies.md
       - Our Rules & Regulations.md
       - Our Learning Spaces.md
       - Our School Safety Policy.md
