--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 logo: /images/About Us/nav_bar_ver_5_cropped.png
 links:
   - title: About Fuchun
-    collection: about-us
+    collection: about-fuchun
   - title: Culture of Care
     url: /culture-of-care/
     sublinks:
