--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,8 +17,8 @@ links:
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-student-leadership/student-leadership-home
       - title: Co-Curricular Activities (CCA)
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-cca/co-curricular-activities-home
-  - title: Uniquely Us
-    url: /uniquely-us/
+  - title: Uniquely Fuchun
+    url: /uniquely-fuchun/
     sublinks:
       - title: Applied Learning Programme
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-speak-up-at-fuchun/speak-up-at-fuchun-home
@@ -28,6 +28,8 @@ links:
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-home-skills-prog/home-skills-home
       - title: Homeroom Programme
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-homeroom-prog/homeroom-home
+      - title: test
+        url: /folders/about-fuchun
   - title: Curriculum
     url: /curriculum/
     sublinks:
