{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_uniquely-fuchun/collection.yml
+++ b/_uniquely-fuchun/collection.yml
@@ -2,5 +2,6 @@ collections:
   uniquely-fuchun:
     output: true
     order:
+      - A Heart for Every Child/test.md
       - A Heart for Every Child/.keep
       - Uniquely Us.md
