{"message":"Update file: navigation.yml","userId":"33227","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -80,3 +80,6 @@ links:
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-moe-websites/moe-websites-home
       - title: Homewell@FCPS
         url: https://go.gov.sg/homewellfcps
+  - title: For Pupils
+    url: /permalink
+    sublinks: []
