{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_for-pupils/collection.yml
+++ b/_for-pupils/collection.yml
@@ -2,5 +2,6 @@ collections:
   for-pupils:
     output: true
     order:
+      - Youth Alumni.md
       - Our School Safety Policy.md
       - Our Rules & Regulations.md
