{"message":"Update file: navigation.yml","userId":"33227","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -81,7 +81,7 @@ links:
       - title: Homewell@FCPS
         url: https://go.gov.sg/homewellfcps
   - title: For Pupils
-    url: /permalink
+    url: /our-rules-n-regulations/
     sublinks:
       - title: Rules and Regulations
         url: /our-rules-n-regulations/
