{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_for-parents/collection.yml
+++ b/_for-parents/collection.yml
@@ -2,5 +2,6 @@ collections:
   for-parents:
     output: true
     order:
+      - Positive Parenting Programs (Triple P).md
       - Mendaki.md
       - General School Information.md
