--- a/_hidden/collection.yml
+++ b/_hidden/collection.yml
@@ -2,6 +2,7 @@ collections:
   hidden:
     output: true
     order:
+      - Health Promotion Board.md
       - Uniquely Us.md
       - Our Publications.md
       - Our School Policies.md
