--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -93,3 +93,16 @@ links:
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-bridging-resources/login-to-bridging-resources
       - title: Youth Alumni
         url: /youth-alumni/
+  - title: For Parents
+    url: /general-school-information/
+    sublinks:
+      - title: General School Information
+        url: /general-school-information/
+      - title: Useful Links
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-moe-websites/moe-websites-home
+      - title: School Counsellor Referral
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-submit-referral-sc/submit-referral-to-sc-home
+      - title: Positive Parenting Programs
+        url: /positive-parenting-programs-triple-p/
+      - title: Mendaki
+        url: /mendaki/
