{"message":"Update file: navigation.yml","userId":"33227","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -106,3 +106,12 @@ links:
         url: /positive-parenting-programs-triple-p/
       - title: Mendaki
         url: /mendaki/
+  - title: School Events
+    url: /2025
+    sublinks:
+      - title: Highlights
+        url: /2025
+      - title: School Calendar
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-term-calendars/term-calendars-home
+      - title: School Assessments
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site/school-assessments-home
