--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,23 +15,6 @@ links:
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-homeroom-prog/homeroom-home
       - title: A Heart for Every Child
         url: /a-heart-for-every-child/
-  - title: Curriculum
-    url: /curriculum/
-    sublinks:
-      - title: English
-        url: https://sites.google.com/moe.edu.sg/fcps-g-site-el-dept/english-dept-home
-      - title: Mathematics
-        url: https://sites.google.com/moe.edu.sg/fcps-g-site-ma-dept/math-dept-home
-      - title: Science
-        url: https://sites.google.com/moe.edu.sg/fcps-g-site-sc-dept/science-dept-home
-      - title: Mother Tongue
-        url: https://sites.google.com/moe.edu.sg/fcps-g-site-mt-dept/mother-tongue-dept-home
-      - title: Social Studies
-        url: https://sites.google.com/moe.edu.sg/fcps-g-site-ss-dept/social-studies-dept-home
-      - title: PE, Art & Music (PAM)
-        url: https://sites.google.com/moe.edu.sg/fcps-g-site-pam-dept/pe-art-music-dept-home
-      - title: CCE
-        url: https://sites.google.com/moe.edu.sg/fcps-g-site-cce-dept/character-citizenship-education-dept-home
   - title: Partnership
     url: /partnership/school-advisory-committee-sac
     sublinks:
@@ -115,3 +98,20 @@ links:
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-term-calendars/term-calendars-home
       - title: School Assessments
         url: https://sites.google.com/moe.edu.sg/fcps-g-site/school-assessments-home
+  - title: Department
+    url: /curriculum/
+    sublinks:
+      - title: English
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-el-dept/english-dept-home
+      - title: Mathematics
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-ma-dept/math-dept-home
+      - title: Science
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-sc-dept/science-dept-home
+      - title: Mother Tongue
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-mt-dept/mother-tongue-dept-home
+      - title: Social Studies
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-ss-dept/social-studies-dept-home
+      - title: PE, Art & Music (PAM)
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-pam-dept/pe-art-music-dept-home
+      - title: CCE
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-cce-dept/character-citizenship-education-dept-home
