{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_achievements/collection.yml
+++ b/_achievements/collection.yml
@@ -2,5 +2,5 @@ collections:
   achievements:
     output: true
     order:
-      - Students/.keep
+      - Student Achievements/.keep
       - Staff Achievements/.keep
