{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_achievements/collection.yml
+++ b/_achievements/collection.yml
@@ -3,4 +3,5 @@ collections:
     output: true
     order:
       - Staff Achievements/.keep
+      - Student Achievements/2025 Student Achievements.md
       - Student Achievements/.keep
