{"message":"Update file: navigation.yml","userId":"33227","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@ links:
     sublinks:
       - title: Rules and Regulations
         url: /our-rules-n-regulations/
-      - title: Edtec One-stop Hub
+      - title: Edtech One-stop Hub
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-hbl/edtech-guide
       - title: Safety Policy
         url: /our-school-safety-policy/
