--- a/_achievements/collection.yml
+++ b/_achievements/collection.yml
@@ -2,6 +2,7 @@ collections:
   achievements:
     output: true
     order:
+      - Staff Achievements/2025 Staff Achievements.md
       - Staff Achievements/.keep
       - Student Achievements/2025 Student Achievements.md
       - Student Achievements/.keep
