--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,8 @@ links:
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-homeroom-prog/homeroom-home
       - title: A Heart for Every Child
         url: /a-heart-for-every-child/
+      - title: Homewell@FCPS
+        url: https://go.gov.sg/homewellfcps
   - title: For Pupils
     url: /our-rules-n-regulations/
     sublinks:
