{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_department/collection.yml
+++ b/_department/collection.yml
@@ -2,5 +2,6 @@ collections:
   department:
     output: true
     order:
+      - CCE/Values Education.md
       - CCE/Mission & Vision.md
       - CCE/.keep
