{"message":"Update file: navigation.yml","userId":"33227","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -70,6 +70,6 @@ links:
       - title: PE, Art & Music (PAM)
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-pam-dept/pe-art-music-dept-home
       - title: CCE
-        url: https://sites.google.com/moe.edu.sg/fcps-g-site-cce-dept/character-citizenship-education-dept-home
+        url: /cce-mission-vision/
   - title: Achievements
     collection: achievements
