--- a/_department/collection.yml
+++ b/_department/collection.yml
@@ -2,6 +2,7 @@ collections:
   department:
     output: true
     order:
+      - CCE/National Education.md
       - CCE/SEC Development.md
       - CCE/.keep
       - CCE/Mission & Vision.md
