--- a/_department/collection.yml
+++ b/_department/collection.yml
@@ -2,6 +2,7 @@ collections:
   department:
     output: true
     order:
+      - English.md
       - CCE/.keep
       - CCE/Mission & Vision.md
       - CCE/Values Education.md
