--- a/_department/collection.yml
+++ b/_department/collection.yml
@@ -2,6 +2,7 @@ collections:
   department:
     output: true
     order:
+      - PE, Art & Music (PAM).md
       - Mother Tongue.md
       - Science.md
       - Mathematics.md
