{"message":"Update file: navigation.yml","userId":"33227","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -55,7 +55,7 @@ links:
       - title: School Assessments
         url: https://sites.google.com/moe.edu.sg/fcps-g-site/school-assessments-home
   - title: Department
-    url: /curriculum/
+    url: /english/
     sublinks:
       - title: English
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-el-dept/english-dept-home
