{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_uniquely-fuchun/collection.yml
+++ b/_uniquely-fuchun/collection.yml
@@ -2,4 +2,5 @@ collections:
   uniquely-fuchun:
     output: true
     order:
+      - Applied Learning Programme.md
       - A Heart for Every Child.md
