--- a/_uniquely-fuchun/collection.yml
+++ b/_uniquely-fuchun/collection.yml
@@ -2,5 +2,6 @@ collections:
   uniquely-fuchun:
     output: true
     order:
+      - Learning for Life Programme.md
       - Applied Learning Programme.md
       - A Heart for Every Child.md
