--- a/_uniquely-fuchun/collection.yml
+++ b/_uniquely-fuchun/collection.yml
@@ -2,6 +2,7 @@ collections:
   uniquely-fuchun:
     output: true
     order:
+      - Home Skills Programme.md
       - Learning for Life Programme.md
       - Applied Learning Programme.md
       - A Heart for Every Child.md
