{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_uniquely-fuchun/collection.yml
+++ b/_uniquely-fuchun/collection.yml
@@ -2,6 +2,7 @@ collections:
   uniquely-fuchun:
     output: true
     order:
+      - Homeroom Programme.md
       - Home Skills Programme.md
       - Learning for Life Programme.md
       - Applied Learning Programme.md
