{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_uniquely-fuchun/collection.yml
+++ b/_uniquely-fuchun/collection.yml
@@ -2,6 +2,7 @@ collections:
   uniquely-fuchun:
     output: true
     order:
+      - Homewell@FCPS.md
       - A Heart for Every Child/A Heart for Every Child.md
       - A Heart for Every Child/.keep
       - Applied Learning Programme.md
