--- a/_uniquely-fuchun/collection.yml
+++ b/_uniquely-fuchun/collection.yml
@@ -6,6 +6,7 @@ collections:
       - Learning for Life Programme.md
       - Home Skills Programme.md
       - Homeroom Programme.md
+      - A Heart for Every Child/Primary 1 & 2 Programmes.md
       - A Heart for Every Child/.keep
       - A Heart for Every Child/A Heart for Every Child.md
       - Homewell@FCPS.md
