--- a/_for-pupils/collection.yml
+++ b/_for-pupils/collection.yml
@@ -2,6 +2,7 @@ collections:
   for-pupils:
     output: true
     order:
+      - Edtech One Stop Hub.md
       - Our Rules & Regulations.md
       - Our School Safety Policy.md
       - Youth Alumni.md
