--- a/_for-parents/collection.yml
+++ b/_for-parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   for-parents:
     output: true
     order:
+      - School Counsellor Referral.md
       - Useful Links.md
       - General School Information.md
       - Positive Parenting Programs (Triple P).md
