{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_school-events/collection.yml
+++ b/_school-events/collection.yml
@@ -2,5 +2,6 @@ collections:
   school-events:
     output: true
     order:
+      - School Calendar.md
       - Highlights/2025.md
       - Highlights/.keep
