--- a/_school-events/collection.yml
+++ b/_school-events/collection.yml
@@ -2,6 +2,7 @@ collections:
   school-events:
     output: true
     order:
+      - School Assessments.md
       - School Calendar.md
       - Highlights/2025.md
       - Highlights/.keep
