{"message":"Update file: navigation.yml","userId":"33227","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -54,7 +54,7 @@ links:
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-term-calendars/term-calendars-home
       - title: School Assessments
         url: https://sites.google.com/moe.edu.sg/fcps-g-site/school-assessments-home
-  - title: Department
+  - title: Departments
     url: /english/
     sublinks:
       - title: English
