--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-logo: /images/Website logos/nav_bar_ver_5_cropped.png
+logo: /images/Website logos/nav_bar_final.png
 links:
   - title: About Fuchun
     collection: about-fuchun
