{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_for-parents/collection.yml
+++ b/_for-parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   for-parents:
     output: true
     order:
+      - General School Information/General School Information.md
       - General School Information/.keep
       - Useful Links.md
       - School Counsellor Referral.md
