--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -31,7 +31,7 @@ links:
       - title: Youth Alumni
         url: /youth-alumni/
   - title: For Parents
-    url: /general-school-information/
+    url: /school-information/
     sublinks:
       - title: General School Information
         url: /general-school-information/
