--- a/_for-parents/collection.yml
+++ b/_for-parents/collection.yml
@@ -2,16 +2,16 @@ collections:
   for-parents:
     output: true
     order:
-      - General School Information/.keep
-      - General School Information/School Information.md
-      - General School Information/Payment via GIRO.md
-      - General School Information/Payment via Edusave.md
-      - General School Information/Student Illness and Injury Protocol.md
-      - General School Information/School Uniform Services.md
-      - General School Information/School Bus Services.md
-      - General School Information/School Bookshop Services.md
-      - General School Information/School Based Student Care Centre.md
-      - General School Information/School Dental Services.md
+      - School Information/.keep
+      - School Information/School Information.md
+      - School Information/Payment via GIRO.md
+      - School Information/Payment via Edusave.md
+      - School Information/Student Illness and Injury Protocol.md
+      - School Information/School Uniform Services.md
+      - School Information/School Bus Services.md
+      - School Information/School Bookshop Services.md
+      - School Information/School Based Student Care Centre.md
+      - School Information/School Dental Services.md
       - Useful Links.md
       - School Counsellor Referral.md
       - Positive Parenting Programs (Triple P).md
