{"message":"Update file: navigation.yml","userId":"33227","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -33,8 +33,8 @@ links:
   - title: For Parents
     url: /school-information/
     sublinks:
-      - title: General School Information
-        url: /general-school-information/
+      - title: School Information
+        url: /school-information/
       - title: Useful Links
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-moe-websites/moe-websites-home
       - title: School Counsellor Referral
