{"message":"Update file: navigation.yml","userId":"33227","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -45,6 +45,8 @@ links:
         url: /mendaki/
       - title: Parents' Briefing Materials
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-parents-briefing/parents-briefing-home
+      - title: Have A Question?
+        url: https://ask.gov.sg/fcps
   - title: School Events
     url: /2025
     sublinks:
