{"message":"Update file: navigation.yml","userId":"33227","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,8 @@ links:
   - title: Uniquely Fuchun
     url: /applied-learning-programme/
     sublinks:
+      - title: Interdisciplinary Project Work
+        url: /interdisciplinary-project-work/
       - title: Applied Learning Programme
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-speak-up-at-fuchun/speak-up-at-fuchun-home
       - title: Learning for Life Programme
