{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_for-pupils/collection.yml
+++ b/_for-pupils/collection.yml
@@ -2,7 +2,7 @@ collections:
   for-pupils:
     output: true
     order:
-      - Acceptable Use Policy.md
+      - Acceptable Use Policy (AUP).md
       - Our Rules & Regulations.md
       - Edtech One Stop Hub.md
       - Our School Safety Policy.md
