--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,6 +24,8 @@ links:
     sublinks:
       - title: Rules and Regulations
         url: /our-rules-n-regulations/
+      - title: Acceptable Use Policy (AUP)
+        url: /acceptable-use-policy/
       - title: Edtech One-stop Hub
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-hbl/edtech-one-stop-hub
       - title: Safety Policy
