{"message":"Update file: collection.yml","userId":"33227","fileName":"collection.yml"}

--- a/_hidden/collection.yml
+++ b/_hidden/collection.yml
@@ -2,6 +2,7 @@ collections:
   hidden:
     output: true
     order:
+      - Primary 1 Form Teachers.md
       - School Calendar.md
       - Health Promotion Board.md
       - Uniquely Us.md
