--- a/_hidden/collection.yml
+++ b/_hidden/collection.yml
@@ -2,6 +2,7 @@ collections:
   hidden:
     output: true
     order:
+      - Primary 2 Form Teachers.md
       - Primary 1 Form Teachers.md
       - School Calendar.md
       - Health Promotion Board.md
