{"message":"Update file: navigation.yml","userId":"33227","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -25,7 +25,7 @@ links:
       - title: Rules and Regulations
         url: /our-rules-n-regulations/
       - title: Acceptable Use Policy (AUP)
-        url: /acceptable-use-policy/
+        url: https://sites.google.com/moe.edu.sg/fcps-g-site-hbl/acceptable-use-policy-aup
       - title: Edtech One-stop Hub
         url: https://sites.google.com/moe.edu.sg/fcps-g-site-hbl/edtech-one-stop-hub
       - title: Safety Policy
