--- a/_about-fuchun/collection.yml
+++ b/_about-fuchun/collection.yml
@@ -5,6 +5,7 @@ collections:
       - Principal’s Message.md
       - Fuchun Story.md
       - Vision, Mission, Values, Motto & Crest.md
+      - Our People/Primary 4 Form Teachers.md
       - Our People/Primary 3 Form Teachers.md
       - Our People/Primary 2 Form Teachers.md
       - Our People/Primary 1 Form Teachers.md
