{"message":"Update file: footer.yml","userId":"33227","fileName":"footer.yml"}

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,3 +3,4 @@ show_reach: true
 social_media:
   facebook: https://www.facebook.com/FuchunPrimarySchool.Singapore/
   instagram: https://www.instagram.com/fuchunprimaryofficial/
+faq: https://ask.gov.sg/fcps
