--- a/_for-parents/collection.yml
+++ b/_for-parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   for-parents:
     output: true
     order:
+      - School Assessments.md
       - School Information/.keep
       - School Information/School Information.md
       - School Information/Payment via GIRO.md
